update for testing

--- a/index.html
+++ b/index.html
@@ -149,27 +149,21 @@
     <img class="showcase-head hidden rotate slow" src="assets/img/showcase.svg" alt="Ausschnitt mit meiner Cap">
     <div class="ref-grid teaser">
 
-      <a
-      href="referenzen/caprunia.html"
-      class="ref">
+      <a class="ref" href="#">
+        <img class="ref-img top"
+        src="assets/img/referenzen/bonis-tech/bonis_tech-teaser.png"
+        alt="TEST">
+      </a>
+
+      <a class="ref" href="ref-detail/caprunia.html">
         <img class="ref-img top"
         src="assets/img/referenzen/caprunia/caprunia-teaser.png"
         alt="TEST">
       </a>
 
-      <a
-      href="referenzen/snipes.html"
-      class="ref">
+      <a class="ref" href="ref-detail/snipes.html">
         <img class="ref-img top"
-        src="assets/img/referenzen/caprunia/caprunia-teaser.png"
-        alt="TEST">
-      </a>
-
-      <a
-      href="referenzen/caprunia.html"
-      class="ref">
-        <img class="ref-img top"
-        src="assets/img/referenzen/caprunia/caprunia-teaser.png"
+        src="assets/img/referenzen/snipes/snipes-teaser.png"
         alt="TEST">
       </a>
 
