--- a/referenzen.html
+++ b/referenzen.html
@@ -83,24 +83,43 @@
 <section class="cmp references">
   <div class="grid-container">
     <div class="ref-grid">
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+
+      <a class="ref ref-1" href="ref-detail/snipes.html">
+        <img class="ref-img top"
+        src="assets/img/referenzen/snipes/snipes-teaser.png"
+        alt="TEST">
       </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+
+      <a class="ref ref-2" href="ref-detail/caprunia.html">
+        <img class="ref-img top"
+        src="assets/img/referenzen/caprunia/caprunia-teaser.png"
+        alt="TEST">
       </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+
+      <a class="ref ref-3" href="">
+        <img class="ref-img top"
+        src="assets/img/referenzen/asta-trier/asta-teaser.png"
+        alt="TEST">
       </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+
+      <a class="ref ref-4" href="">
+        <img class="ref-img top"
+        src="assets/img/referenzen/layc/layc-teaser.png"
+        alt="TEST">
       </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+
+      <a class="ref ref-5" href="">
+        <img class="ref-img top"
+        src="assets/img/referenzen/mies-vdr/mies-teaser.png"
+        alt="TEST">
       </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+
+      <a class="ref ref-6" href="">
+        <img class="ref-img top"
+        src="assets/img/referenzen/bonis-tech/bonis_tech-teaser.png"
+        alt="TEST">
       </a>
+
     </div>
   </div>
 </section>
