--- a/ref-detail/snipes.html
+++ b/ref-detail/snipes.html
@@ -77,7 +77,7 @@
   <section class="ref-header grid-container">
     <div class="logo-wrap">
       <img class="ref-logo parallaxMouse" data-value="-5"
-      src="../assets/img/referenzen/caprunia/logo-caprunia.svg" alt="caprunia Logo">
+      src="../assets/img/referenzen/snipes/logo-snipes.svg" alt="snipes Logo">
     </div>
     <p class="vertical-text">
       <span>scroll</span>
@@ -93,9 +93,9 @@
         <h1 class="cell medium-6">Snipes</h1>
         <h2 class="cell medium-6">Branding</h2>
         <p class="cell info">
-          Snipes ist ein Onlineshop, der sich auf Outdoor-Equipment spezialisiert hat.
-          Mit einem neuen Logo und dem passenden Corporate Design, haben wir dem Startup
-          ein Gesicht verpasst!
+          SnipesLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+          ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+          et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
         <div class="cell medium-6 facts">
           <p class="fact-block">
@@ -107,19 +107,109 @@
           <p class="fact-block">
             <b>Branche</b>
             <span>
-              Outdoor / Sport
+              Bekleidung / Streetwear
             </span>
           </p>
           <p class="fact-block">
             <b>Jahr</b>
             <span>
-              2022
+              2021
             </span>
           </p>
         </div>
         <div class="cell medium-6 flex-container align-center-middle">
           <img class="ref-logo"
-          src="../assets/img/referenzen/caprunia/logo-caprunia-white.svg" alt="caprunia Logo">
+          src="../assets/img/referenzen/snipes/logo-snipes-white.svg" alt="snipes Logo">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="cmp-colorbook">
+    <h3 class="full-width fw-black hide-for-large">colorbook</h3>
+    <div class="colorbook-wrap grid-container">
+      <div class="img-wrap show-for-large">
+        <img class="colorbook-svg" src="../assets/img/colorbook-outline.svg" alt="Colorbook">
+        <div class="colorbook-title"></div>
+      </div>
+      <div class="card-wrap">
+        <div class="swiper swiper-cards">
+          <div class="swiper-wrapper">
+  
+  
+            <div class="swiper-slide">
+              <div class="color-code">
+                <div class="hex">
+                  <div class="title">HEX</div>
+                  <div class="code">
+                    #262626
+                  </div>
+                </div>
+                <div class="rgb">
+                  <div class="title">RGB</div>
+                  <div class="code">
+                    38<span>38</span>38
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="swiper-slide">
+              <div class="color-code">
+                <div class="hex">
+                  <div class="title">HEX</div>
+                  <div class="code">
+                    #262626
+                  </div>
+                </div>
+                <div class="rgb">
+                  <div class="title">RGB</div>
+                  <div class="code">
+                    38<span>38</span>38
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="swiper-slide">
+              <div class="color-code">
+                <div class="hex">
+                  <div class="title">HEX</div>
+                  <div class="code">
+                    #262626
+                  </div>
+                </div>
+                <div class="rgb">
+                  <div class="title">RGB</div>
+                  <div class="code">
+                    38<span>38</span>38
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="cmp ref-goback">
+    <div class="grid-container">
+      <div class="grid-x">
+        <a href="/referenzen.html" class="cell large-6 goback">
+          zu den <br> <span>referenzen</span>
+          <img src="..//assets/img/red-arrow.svg" alt="roter Pfeil">
+        </a>
+        <hr class="hide-for-large">
+        <div class="cell large-6 text-right">
+          <h3 class="fw-black">mehr auf</h3>
+          <div class="social-wrap">
+            <a href="https://www.instagram.com/beclamo/" target="_blank" class="instagram">
+              <img src="..//assets/img/instagram/instagram-white.svg" alt="Instagram">
+            </a>
+            <a href="https://www.behance.net/beclamo" target="_blank" class="behance">
+              <img src="..//assets/img/behance/behance-white.svg" alt="Behance">
+            </a>
+          </div>
         </div>
       </div>
     </div>
