--- a/ref-detail/bonis-tech.html
+++ b/ref-detail/bonis-tech.html
@@ -73,11 +73,11 @@
     <a class="btn outline" href="#">+49 176 3247 1512</a>
   </div>
 </nav>
-<div class="ref-snipes">
+<div class="ref-bonis-tech">
   <section class="ref-header grid-container">
     <div class="logo-wrap">
       <img class="ref-logo parallaxMouse" data-value="-5"
-      src="../assets/img/referenzen/snipes/logo-snipes.svg" alt="snipes Logo">
+      src="../assets/img/referenzen/bonis-tech/logo-bonis-tech.svg" alt="bonis-tech Logo">
     </div>
     <p class="vertical-text">
       <span>scroll</span>
@@ -90,10 +90,10 @@
   <section class="ref-info">
     <div class="grid-container">
       <div class="grid-x">
-        <h1 class="cell medium-6">Snipes</h1>
-        <h2 class="cell medium-6">Branding</h2>
+        <h1 class="cell medium-6">BonisTech</h1>
+        <h2 class="cell medium-6">Logodesign</h2>
         <p class="cell info">
-          Snipes Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+          BonisTech Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
           ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
           et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
@@ -101,13 +101,13 @@
           <p class="fact-block">
             <b>Kunde</b>
             <span>
-              Snipes
+              Jonas Merhej (BonisTech)
             </span>
           </p>
           <p class="fact-block">
             <b>Branche</b>
             <span>
-              Bekleidung / Streetwear
+              Web3 Development
             </span>
           </p>
           <p class="fact-block">
@@ -119,7 +119,7 @@
         </div>
         <div class="cell medium-6 flex-container align-center-middle">
           <img class="ref-logo"
-          src="../assets/img/referenzen/snipes/logo-snipes-white.svg" alt="snipes Logo">
+          src="../assets/img/referenzen/bonis-tech/logo-bonis-tech.svg" alt="snipes Logo">
         </div>
       </div>
     </div>
@@ -141,13 +141,13 @@
                 <div class="hex">
                   <div class="title">HEX</div>
                   <div class="code">
-                    #494B52
+                    #F72854
                   </div>
                 </div>
                 <div class="rgb">
                   <div class="title">RGB</div>
                   <div class="code">
-                    73<span>75</span>82
+                    247<span>40</span>84
                   </div>
                 </div>
               </div>
@@ -175,13 +175,13 @@
                 <div class="hex">
                   <div class="title">HEX</div>
                   <div class="code">
-                    #EA640C
+                    #250613
                   </div>
                 </div>
                 <div class="rgb">
                   <div class="title">RGB</div>
                   <div class="code">
-                    234<span>100</span>12
+                    37<span>6</span>19
                   </div>
                 </div>
               </div>
