--- a/ref-detail/caprunia.html
+++ b/ref-detail/caprunia.html
@@ -169,6 +169,16 @@
       <div class="letter">z</div>
     </div>
   </section>
+  <section class="ref-gallery">
+    <div class="grid-container gallery-grid">
+      <img src="https://placebeard.it/640/640" alt="">
+      <img src="https://placebeard.it/640/640" alt="">
+      <img src="https://placebeard.it/640/640" alt="">
+      <img src="https://placebeard.it/640/640" alt="">
+      <img src="https://placebeard.it/640/640" alt="">
+      <img src="https://placebeard.it/640/640" alt="">
+    </div>
+  </section>
   <section class="cmp-colorbook">
     <h3 class="full-width fw-black hide-for-large">colorbook</h3>
     <div class="colorbook-wrap grid-container">
@@ -203,13 +213,13 @@
                 <div class="hex">
                   <div class="title">HEX</div>
                   <div class="code">
-                    #262626
+                    #F2F2F2
                   </div>
                 </div>
                 <div class="rgb">
                   <div class="title">RGB</div>
                   <div class="code">
-                    38<span>38</span>38
+                    242<span>242</span>242
                   </div>
                 </div>
               </div>
@@ -220,13 +230,13 @@
                 <div class="hex">
                   <div class="title">HEX</div>
                   <div class="code">
-                    #262626
+                    #595959
                   </div>
                 </div>
                 <div class="rgb">
                   <div class="title">RGB</div>
                   <div class="code">
-                    38<span>38</span>38
+                    89<span>89</span>89
                   </div>
                 </div>
               </div>
@@ -237,13 +247,13 @@
                 <div class="hex">
                   <div class="title">HEX</div>
                   <div class="code">
-                    #262626
+                    #B52F2F
                   </div>
                 </div>
                 <div class="rgb">
                   <div class="title">RGB</div>
                   <div class="code">
-                    38<span>38</span>38
+                    181<span>47</span>47
                   </div>
                 </div>
               </div>
@@ -302,9 +312,9 @@
     </div>
   </div>
   <div class="grid-container legal-wrap">
-    <a href="..//impressum" class="imprint">Impressum</a>
+    <a href="..//impressum.html" class="imprint">Impressum</a>
     <img class="show-for-medium" src="../assets/img/beclamo/logo-compact-dark.svg" alt="beclamo logo">
-    <a href="..//datenschutz" class="data">Datenschutz</a>
+    <a href="..//datenschutz.html" class="data">Datenschutz</a>
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
