--- a/referenzen.html
+++ b/referenzen.html
@@ -87,37 +87,37 @@
       <a class="ref ref-1" href="ref-detail/snipes.html">
         <img class="ref-img top"
         src="assets/img/referenzen/snipes/snipes-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
       <a class="ref ref-2" href="ref-detail/caprunia.html">
         <img class="ref-img top"
         src="assets/img/referenzen/caprunia/caprunia-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
       <a class="ref ref-3" href="">
         <img class="ref-img top"
         src="assets/img/referenzen/asta-trier/asta-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
       <a class="ref ref-4" href="">
         <img class="ref-img top"
         src="assets/img/referenzen/layc/layc-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
       <a class="ref ref-5" href="">
         <img class="ref-img top"
         src="assets/img/referenzen/mies-vdr/mies-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
-      <a class="ref ref-6" href="">
+      <a class="ref ref-6" href="ref-detail/bonis-tech.html">
         <img class="ref-img top"
         src="assets/img/referenzen/bonis-tech/bonis_tech-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
     </div>
@@ -148,9 +148,9 @@
     </div>
   </div>
   <div class="grid-container legal-wrap">
-    <a href="/impressum" class="imprint">Impressum</a>
+    <a href="/impressum.html" class="imprint">Impressum</a>
     <img class="show-for-medium" src="assets/img/beclamo/logo-compact-dark.svg" alt="beclamo logo">
-    <a href="/datenschutz" class="data">Datenschutz</a>
+    <a href="/datenschutz.html" class="data">Datenschutz</a>
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
