--- a/about.html
+++ b/about.html
@@ -73,10 +73,50 @@
     <a class="btn outline" href="#">+49 176 3247 1512</a>
   </div>
 </nav>
-<section class="about-head page-title">
+<section class="about-head">
   <div class="grid-container">
     <div class="grid-x">
-      <h1 class="full-width fw-black">Über mich</h1>
+      <h1 class="page-title full-width fw-black">Über mich</h1>
+      <div class="img-wrap">
+        <img class="cap parallaxMouse" data-value="8" src="assets/img/me/cap.png" alt="Ausschnitt mit meiner Cap">
+        <img class="face parallaxMouse" data-value="5" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts">
+      </div>
+    </div>
+  </div>
+</section>
+<section class="about-text dark-bg">
+  <div class="grid-container grid-x">
+    <p class="cell">
+      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    </p>
+  </div>
+</section>
+<section class="cmp main-showcase references">
+  <div class="grid-container">
+    <img class="showcase-head hidden rotate slow" src="assets/img/showcase.svg" alt="Ausschnitt mit meiner Cap">
+    <div class="ref-grid teaser">
+
+      <a class="ref" href="ref-detail/bonis-tech.html">
+        <img class="ref-img top"
+        src="assets/img/referenzen/bonis-tech/bonis_tech-teaser.png"
+        alt="Teaserbild zur Referenz">
+      </a>
+
+      <a class="ref" href="ref-detail/caprunia.html">
+        <img class="ref-img top"
+        src="assets/img/referenzen/caprunia/caprunia-teaser.png"
+        alt="Teaserbild zur Referenz">
+      </a>
+
+      <a class="ref" href="ref-detail/snipes.html">
+        <img class="ref-img top"
+        src="assets/img/referenzen/snipes/snipes-teaser.png"
+        alt="Teaserbild zur Referenz">
+      </a>
+
+      <a class="ref link" href="referenzen.html">
+        alle referenzen
+      </a>
     </div>
   </div>
 </section>
@@ -105,9 +145,9 @@
     </div>
   </div>
   <div class="grid-container legal-wrap">
-    <a href="/impressum" class="imprint">Impressum</a>
+    <a href="/impressum.html" class="imprint">Impressum</a>
     <img class="show-for-medium" src="assets/img/beclamo/logo-compact-dark.svg" alt="beclamo logo">
-    <a href="/datenschutz" class="data">Datenschutz</a>
+    <a href="/datenschutz.html" class="data">Datenschutz</a>
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
