--- a/index.html
+++ b/index.html
@@ -144,27 +144,27 @@
     </div>
   </div>
 </section>
-<section class="cmp home-showcase references">
+<section class="cmp main-showcase references">
   <div class="grid-container">
     <img class="showcase-head hidden rotate slow" src="assets/img/showcase.svg" alt="Ausschnitt mit meiner Cap">
     <div class="ref-grid teaser">
 
-      <a class="ref" href="#">
+      <a class="ref" href="ref-detail/bonis-tech.html">
         <img class="ref-img top"
         src="assets/img/referenzen/bonis-tech/bonis_tech-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
       <a class="ref" href="ref-detail/caprunia.html">
         <img class="ref-img top"
         src="assets/img/referenzen/caprunia/caprunia-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
       <a class="ref" href="ref-detail/snipes.html">
         <img class="ref-img top"
         src="assets/img/referenzen/snipes/snipes-teaser.png"
-        alt="TEST">
+        alt="Teaserbild zur Referenz">
       </a>
 
       <a class="ref link" href="referenzen.html">
@@ -198,9 +198,9 @@
     </div>
   </div>
   <div class="grid-container legal-wrap">
-    <a href="/impressum" class="imprint">Impressum</a>
+    <a href="/impressum.html" class="imprint">Impressum</a>
     <img class="show-for-medium" src="assets/img/beclamo/logo-compact-dark.svg" alt="beclamo logo">
-    <a href="/datenschutz" class="data">Datenschutz</a>
+    <a href="/datenschutz.html" class="data">Datenschutz</a>
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
