--- a/ref-detail/caprunia.html
+++ b/ref-detail/caprunia.html
@@ -138,7 +138,10 @@
       </section>
       <section class="ref-font-caprunia">
         <div class="grid-container">
-          <p class="cell font-name">Syncopate — Bold</p>
+          <div class="grid-x">
+            <h2 class="cell medium-6">Font</h2>
+            <p class="cell medium-6 font-name">Syncopate — Bold</p>
+          </div>
         </div>
         <div class="scroll-x">
           <div class="letter">a</div>
@@ -171,12 +174,12 @@
       </section>
       <section class="ref-gallery">
         <div class="grid-container gallery-grid">
-          <img src="https://placebeard.it/640/640" alt="">
-          <img src="https://placebeard.it/640/640" alt="">
-          <img src="https://placebeard.it/640/640" alt="">
-          <img src="https://placebeard.it/640/640" alt="">
-          <img src="https://placebeard.it/640/640" alt="">
-          <img src="https://placebeard.it/640/640" alt="">
+          <img src="../assets/img/referenzen/caprunia/grid/billboard.png" alt="">
+          <img src="../assets/img/referenzen/caprunia/grid/sign.png" alt="">
+          <img src="../assets/img/referenzen/caprunia/grid/icon.png" alt="">
+          <img src="../assets/img/referenzen/caprunia/grid/phone.png" alt="">
+          <img src="../assets/img/referenzen/caprunia/grid/card.png" alt="">
+          <img src="../assets/img/referenzen/caprunia/grid/textil.jpg" alt="">
         </div>
       </section>
       <section class="cmp-colorbook">
