--- a/ref-detail/bonis-tech.html
+++ b/ref-detail/bonis-tech.html
@@ -93,9 +93,8 @@
             <h1 class="cell medium-6">BonisTech</h1>
             <h2 class="cell medium-6">Logodesign</h2>
             <p class="cell info">
-              BonisTech Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-              ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-              et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Jonas, das Gesicht hinter BonisTech, ist als Freelancer in der IT-Branche tätig.
+              Er hat sich auf die Web3 Entwicklung spezialisiert und arbeitet auf der Blockchain.
             </p>
             <div class="cell medium-6 facts">
               <p class="fact-block">
@@ -122,6 +121,14 @@
               src="../assets/img/referenzen/bonis-tech/logo-bonis-tech.svg" alt="snipes Logo">
             </div>
           </div>
+        </div>
+      </section>
+      <section class="ref-gallery">
+        <div class="grid-container gallery-grid">
+          <img src="../assets/img/referenzen/bonis-tech/grid/render.png" alt="Rendering Blockchain">
+          <img src="../assets/img/referenzen/bonis-tech/grid/pc.png" alt="MacBook mit Logo">
+          <img src="../assets/img/referenzen/bonis-tech/grid/icon.png" alt="Icon">
+          <img src="../assets/img/referenzen/bonis-tech/grid/phone.png" alt="Smartphone">
         </div>
       </section>
       <section class="cmp-colorbook">
