--- a/ref-detail/caprunia.html
+++ b/ref-detail/caprunia.html
@@ -174,12 +174,12 @@
       </section>
       <section class="ref-gallery">
         <div class="grid-container gallery-grid">
-          <img src="../assets/img/referenzen/caprunia/grid/billboard.png" alt="">
-          <img src="../assets/img/referenzen/caprunia/grid/sign.png" alt="">
-          <img src="../assets/img/referenzen/caprunia/grid/icon.png" alt="">
-          <img src="../assets/img/referenzen/caprunia/grid/phone.png" alt="">
-          <img src="../assets/img/referenzen/caprunia/grid/card.png" alt="">
-          <img src="../assets/img/referenzen/caprunia/grid/textil.jpg" alt="">
+          <img src="../assets/img/referenzen/caprunia/grid/billboard.png" alt="Plakat">
+          <img src="../assets/img/referenzen/caprunia/grid/sign.png" alt="Schild">
+          <img src="../assets/img/referenzen/caprunia/grid/icon.png" alt="Icon">
+          <img src="../assets/img/referenzen/caprunia/grid/phone.png" alt="Smartphone">
+          <img src="../assets/img/referenzen/caprunia/grid/card.png" alt="Visitenkarte">
+          <img src="../assets/img/referenzen/caprunia/grid/textil.jpg" alt="Textilien">
         </div>
       </section>
       <section class="cmp-colorbook">
