--- a/ref-detail/snipes.html
+++ b/ref-detail/snipes.html
@@ -93,9 +93,8 @@
             <h1 class="cell medium-6">Snipes</h1>
             <h2 class="cell medium-6">Branding</h2>
             <p class="cell info">
-              Snipes Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-              ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-              et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              Das aktuelle Logo von Snipes wirkt sehr unruhig und ist nicht wirklich ausbalanchiert. Die markantesten
+              Stielelemente, wie das orangene Quardrat und die gestreckte Schrift, habe ich in meinem Redesign beibehalten.
             </p>
             <div class="cell medium-6 facts">
               <p class="fact-block">
@@ -122,6 +121,16 @@
               src="../assets/img/referenzen/snipes/logo-snipes-white.svg" alt="snipes Logo">
             </div>
           </div>
+        </div>
+      </section>
+      <section class="ref-gallery">
+        <div class="grid-container gallery-grid">
+          <img src="../assets/img/referenzen/snipes/grid/billboard.png" alt="Plakat">
+          <img src="../assets/img/referenzen/snipes/grid/sign.png" alt="Schild">
+          <img src="../assets/img/referenzen/snipes/grid/icon.png" alt="Icon">
+          <img src="../assets/img/referenzen/snipes/grid/phone.png" alt="Smartphone">
+          <img src="../assets/img/referenzen/snipes/grid/mood.png" alt="Stimmungsbild">
+          <img src="../assets/img/referenzen/snipes/grid/vergleich.png" alt="Vergleich altes und neues Logo">
         </div>
       </section>
       <section class="cmp-colorbook">
