--- a/referenzen.html
+++ b/referenzen.html
@@ -95,7 +95,7 @@
           alt="Teaserbild zur Referenz">
         </a>
   
-        <a class="ref ref-3" href="">
+        <a class="ref ref-3" href="ref-detail/asta-trier.html">
           <img class="ref-img top"
           src="assets/img/referenzen/asta-trier/asta-teaser.png"
           alt="Teaserbild zur Referenz">
