--- a/ref-detail/bonis-tech.html
+++ b/ref-detail/bonis-tech.html
@@ -124,10 +124,10 @@
     </section>
     <section class="ref-gallery">
       <div class="grid-container gallery-grid">
-        <img src="../assets/img/referenzen/bonis-tech/grid/render.png" alt="Rendering Blockchain">
-        <img src="../assets/img/referenzen/bonis-tech/grid/pc.png" alt="MacBook mit Logo">
-        <img src="../assets/img/referenzen/bonis-tech/grid/icon.png" alt="Icon">
-        <img src="../assets/img/referenzen/bonis-tech/grid/phone.png" alt="Smartphone">
+        <img src="../assets/img/referenzen/bonis-tech/grid/render.jpg" alt="Rendering Blockchain">
+        <img src="../assets/img/referenzen/bonis-tech/grid/pc.jpg" alt="MacBook mit Logo">
+        <img src="../assets/img/referenzen/bonis-tech/grid/icon.jpg" alt="Icon">
+        <img src="../assets/img/referenzen/bonis-tech/grid/phone.jpg" alt="Smartphone">
       </div>
     </section>
     <section class="cmp-colorbook">
