--- a/ref-detail/asta-trier.html
+++ b/ref-detail/asta-trier.html
@@ -79,8 +79,8 @@
         src="../assets/img/referenzen/asta-trier/logo-asta.svg" alt="ASTA Logo">
       </div>
       <p class="vertical-text">
-        <span class="hidden delay-3 slow slide-in-left">scroll</span>
-        <span class="hidden delay-3 slow slide-in-right">down</span>
+        <span>scroll</span>
+        <span>down</span>
       </p>
       <svg id="ref-keil" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192.88 276.3">
         <path class="cls-1" d="M174,274.39c-12.02-2.46-23.45-7.27-33.61-14.14-15.11-10.2-26.94-24.57-34.06-41.36-2.4-5.69-4.24-11.6-5.48-17.65-1.27-6.23-1.91-12.58-1.91-18.94v1.9L96.94,0h-1l-2,184.11v-1.82c0,6.36-.64,12.71-1.91,18.94-1.24,6.05-3.07,11.96-5.48,17.65-2.37,5.59-5.27,10.94-8.67,15.97-3.37,4.99-7.22,9.65-11.48,13.91-4.26,4.26-8.92,8.1-13.91,11.48-5.03,3.4-10.38,6.3-15.97,8.67-5.69,2.4-11.6,4.24-17.64,5.48-6.22,1.27-12.54,1.91-18.89,1.91H192.88c-6.34,0-12.67-.64-18.88-1.91Z"/>
@@ -140,7 +140,7 @@
       <div class="grid-container">
         <div class="grid-x head">
           <h2 class="cell medium-6">Font</h2>
-          <p class="cell medium-6 font-name">Monterrat</p>
+          <p class="cell medium-6 font-name">Montserrat</p>
         </div>
       </div>
       <div class="splide drag-scroll">
