--- a/referenzen.html
+++ b/referenzen.html
@@ -75,7 +75,7 @@
   <section class="references-head page-title">
     <div class="grid-container">
       <div class="grid-x">
-        <h1 class="full-width fw-black hidden slide-up">Referenzen</h1>
+        <h1 class="full-width fw-black">Referenzen</h1>
       </div>
     </div>
   </section>
@@ -107,7 +107,7 @@
           alt="Teaserbild zur Referenz">
         </a>
   
-        <a class="ref ref-5" href="">
+        <a class="ref ref-5" href="ref-detail/mies-vdr.html">
           <img class="ref-img top"
           src="assets/img/referenzen/mies-vdr/mies-teaser.png"
           alt="Teaserbild zur Referenz">
