--- a/ref-detail/asta-trier.html
+++ b/ref-detail/asta-trier.html
@@ -136,7 +136,7 @@
         <img src="../assets/img/referenzen/asta-trier/icon-af-white.svg" alt="afat-trier Icon">
       </div>
     </section>
-    <section class="ref-font-asta-trier">
+    <section class="ref-font">
       <div class="grid-container">
         <div class="grid-x head">
           <h2 class="cell medium-6">Font</h2>
