--- a/ref-detail/mies-vdr.html
+++ b/ref-detail/mies-vdr.html
@@ -123,7 +123,7 @@
         </div>
       </div>
     </section>
-    <section class="ref-font-mies-vdr">
+    <section class="ref-font">
       <div class="grid-container">
         <div class="grid-x head">
           <h2 class="cell medium-6">Font</h2>
