--- a/referenzen.html
+++ b/referenzen.html
@@ -101,7 +101,7 @@
           alt="Teaserbild zur Referenz">
         </a>
   
-        <a class="ref ref-4" href="">
+        <a class="ref ref-4" href="ref-detail/layc.html">
           <img class="ref-img top"
           src="assets/img/referenzen/layc/layc-teaser.png"
           alt="Teaserbild zur Referenz">
