--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-12 col-md-6 image-wrapper">
-                <img src="assets/images/control-head-750x975.webp" alt="Control Logo - Joy Division Cover Band">
+                <img src="assets/images/control-head-750x975.png" alt="Control Logo - Joy Division Cover Band">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper">
@@ -108,7 +108,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/ochs-596x596.webp" alt="Stefan Ochs singer of the Joy division Coverband ">
+                        <img src="assets/images/ochs-596x596.png" alt="Stefan Ochs singer of the Joy division Coverband ">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Stefan Ochs</strong></h5>
@@ -125,7 +125,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/motsch-596x596.webp" alt="Jürgen Motsch guitarist of the Joy division cover band ">
+                        <img src="assets/images/motsch-596x596.png" alt="Jürgen Motsch guitarist of the Joy division cover band ">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Jürgen Motsch</strong></h5>
@@ -140,7 +140,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/mauel-596x596.webp" alt="Dirk Mauel bassist of the Joy division Coverband ">
+                        <img src="assets/images/mauel-596x596.png" alt="Dirk Mauel bassist of the Joy division Coverband ">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Dirk Mauel</strong></h5>
@@ -157,7 +157,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/gangi-596x596.webp" alt="Vincenzo Gangi drummer of the Joy division Coverband ">
+                        <img src="assets/images/gangi-596x596.png" alt="Vincenzo Gangi drummer of the Joy division Coverband ">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Vincenzo Gangi&nbsp;</strong></h5>
@@ -215,7 +215,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://www.youtube.com/watch?v=tBtL2ZfZ2yA" target="_blank"><img src="assets/images/bildschirmfoto-2023-03-29-um-00.33.11-1256x612.webp" alt="Youtube Video Verlinkung"></a>
+                        <a href="https://www.youtube.com/watch?v=tBtL2ZfZ2yA" target="_blank"><img src="assets/images/bildschirmfoto-2023-03-29-um-00.33.11-1256x612.png" alt="Youtube Video Verlinkung"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7">Control live concert teaser</h5>
@@ -228,7 +228,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <a href="https://www.youtube.com/watch?v=KriBOB91ko0&t" target="_blank"><img src="assets/images/bildschirmfoto-2023-03-29-um-00.34.45-1256x653.webp" alt="Youtube Video"></a>
+                        <a href="https://www.youtube.com/watch?v=KriBOB91ko0&t" target="_blank"><img src="assets/images/bildschirmfoto-2023-03-29-um-00.34.45-1256x653.png" alt="Youtube Video"></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-7"><strong>Control at Devil's Place in Saarbrücken</strong></h5>
@@ -282,7 +282,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/261019-theend-crop-u7747-1-900x625.webp" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/261019-theend-crop-u7747-1-900x625.jpeg" alt="Mobirise Website Builder" title="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Any questions?</strong></h5>
@@ -295,7 +295,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-6">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/t-shirts-bett-590x397.webp" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/t-shirts-bett-590x397.jpeg" alt="Mobirise Website Builder" title="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5">You want a Shirt?</h5>
@@ -409,8 +409,9 @@
         </div>
 
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2105535" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2105535" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-editor.html">WYSIWYG HTML Editor</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
-</body>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+  </body>
 </html>
