initial pm-physio

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -70,98 +70,53 @@
   </div>
 </div>
 
-<div class="cmp cmp-header-img">
-  <div class="grid-container page-title">
-    <div class="grid-x">
-      <div class="cell">
-        <h3 class="light">Herzlich willkommen im medizinischen</h3>
-        <h1>
-          Gesundheitszentrum Bellevue
-        </h1>
-        <br>
-        <hr>
-        <p class="light">Inhaber - <b>Patrick Mordiconi</b></p>
-      </div>
+<div class="cmp cmp-header-text">
+  <div class="grid-container">
+    <div class="cell text-header">
+      <h1>Datenschutz</h1>
     </div>
   </div>
 </div>
+<div class="cmp cmp-data-textblock">
+  <div class="grid-container">
+    <h4>Podologiepraxis Bellevue</h4>
+    <address>
+      Nicole Mordiconi<br>
+      Podologiepraxis<br>
+      Lerchesflurweg 9<br>
+      66119 Saarbrücken<br>
+      <br>
+      E-Mail: <a href="mailto:podobellevue@arcor.de">podobellevue@arcor.de</a><br>
+      Telefon: <a href="tel:+4968192567166">+49 681 / 9256716</a><br>
+      Telefax: +49 681 / 9256716<br>
+      <br>
+      IK. 391000319
+    </address>
 
-<div class="cmp cmp-home-about">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <div class="cell medium-7 large-6 text-padding-right align-self-middle">
-        <h2>Wir stellen uns vor</h2>
-        <p class="font-20">Unser Team besteht aus</p>
-        <ul>
-          <li>Einer Podologin</li>
-          <li>Einer Fachfußpflegerin</li>
-        </ul>
-        <p class="font-20">
-          Wir sind alle darauf bedacht uns regelmäßig weiterzubilden und die Technik immer auf den neuesten Stand zu bringen.
-          Zudem wird die Hygiene auf höchsten Anforderungen eingehalten.
-        </p>
-      </div>
-      <div class="cell medium-4 large-6">
-        <div class="grid-x grid-margin-x grid-margin-y medium-up-1 large-up-2">
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/nicole.png" alt="Foto von Nicole Mordiconi">
-            <h4>Nicole Mordiconi</h4>
-            <span>Podologin, Inhaberin</span>
-          </div>
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/fina.png" alt="Foto von ">
-            <h4>Fina Krausche</h4>
-            <span>Fachfußpflegerin</span>
-          </div>
-        </div>
-      </div>
-    </div>
+    <br>
+
+    <h4>Informationen zur Datenerhebung nach Art. 13 DSGVO</h4>
+    <p>
+      Die Nutzung unseres Internetangebotes in ohne die Angabe personenbezogener Daten möglich. Die oben genannte podologische Praxis erhebt Ihre Daten zum Zweck der Erfüllung ihrer vertraglichen Pflichten aus dem Behandlungsvertrag und zu seiner Durchführung.
+      <br>
+      <br>
+      Eine Weitergabe der Daten an Dritte findet nur statt, soweit dies gesetzlich vorgesehen ist (Ärzte, Angehörige nichtärztlicher Gesundheitsberufe, Krankenkassen, Abrechnungsstellen).
+      <br>
+      <br>
+      Die Daten werden nach Maßgabe der gesetzlichen Bestimmungen gelöscht, sobald sie für den Zweck ihrer Verarbeitung nicht mehr erforderlich sind.
+      <br>
+      <br>
+      Sie haben das Recht, Auskunft über die bei uns über Sie gespeicherten Daten zu verlangen. Außerdem können Sie bei Unrichtigkeit der Daten deren Berichtigung oder bei unzulässiger Datenspeicherung die Löschung der Daten bzw. Einschränkung der Verarbeitung fordern.
+      <br>
+      <br>
+      Wenden Sie sich bitte hierfür an die Praxisinhaberin Nicole Mordiconi.
+    </p>
+
   </div>
 </div>
-<div class="cmp cmp-home-introduction">
+<div class="cmp cmp-cookie">
   <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <h2 class="cell small-12">Bei uns sind Ihre Füße in guten Händen!</h2>
-      <div class="cell">
-        <ul class="grid-x grid-margin-x medium-up-2">
-          <li class="cell">Wie sehen meine Füße aus?</li>
-          <li class="cell">Was machen meine Füße für mich?</li>
-          <li class="cell">Wie fühlen sich meine Füße an?</li>
-          <li class="cell">Was mache ich für meine Füße?</li>
-        </ul>
-      </div>
-      <p class="cell">
-        So lautes das Leitbild unserer Praxis. Und aus diesem Grund kümmern wir uns nun schon seit <strong>1993</strong> um Ihre Füße und alles was damit zusammenhängt.
-        Wir bieten Ihnen vielfältige Behandlungen für Ihre Füße und beraten Sie ausführlich zu allen Fragen und Problemen rund um Füße, Schuhe und Strümpfe.
-        Damit Ihre Füße Sie auch morgen noch dorthin tragen wo Sie hin möchten.
-      </p>
-    </div>
-  </div>
-</div>
-<div class="cmp cmp-image-gallery">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y medium-up-2 large-up-4">
-      <div class="cell image-box">
-        <a href="assets/img/praxis/empfang.jpg" data-lightbox="gallery">
-          <img src="assets/img/praxis/empfang.jpg" alt="Empfangsbereich der Praxis">
-        </a>
-      </div>
-        <div class="cell image-box">
-          <a href="assets/img/praxis/wartebereich.jpg" data-lightbox="gallery">
-            <img src="assets/img/praxis/wartebereich.jpg" alt="Wartebereich der Praxis">
-          </a>
-        </div>
-          <div class="cell image-box">
-            <a href="assets/img/praxis/behandlung_1.jpg" data-lightbox="gallery">
-              <img src="assets/img/praxis/behandlung_1.jpg" alt="Erster Behandlungsraum der Praxis">
-            </a>
-          </div>
-            <div class="cell image-box">
-              <a href="assets/img/praxis/behandlung_2.jpg" data-lightbox="gallery">
-                <img src="assets/img/praxis/behandlung_2.jpg" alt="Zweiter Behandlungsraum der Praxis">
-              </a>
-            </div>
-    </div>
+    <script id="CookieDeclaration" src="https://consent.cookiebot.com/9ca4744e-65fd-406e-9a3b-11a5bb9334c4/cd.js" type="text/javascript" async></script>
   </div>
 </div>
 
