--- a/preise.html
+++ b/preise.html
@@ -47,7 +47,7 @@
         <img src="assets/img/logo.svg" alt="Podologie-Praxis Bellevue Logo">
       </a>
       <ul class="cell large-auto main-nav">
-        <li><a class="" href="preise.html">Preise</a></li>
+        <li><a class="active" href="preise.html">Preise</a></li>
         <li><a class="" href="leistungen.html">Leistungen</a></li>
       </ul>
     </div>
@@ -70,97 +70,134 @@
   </div>
 </div>
 
-<div class="cmp cmp-header-img">
-  <div class="grid-container page-title">
-    <div class="grid-x">
-      <div class="cell">
-        <h3 class="light">Herzlich willkommen im medizinischen</h3>
-        <h1>
-          Gesundheitszentrum Bellevue
-        </h1>
-        <br>
-        <hr>
-        <p class="light">Inhaber - <b>Patrick Mordiconi</b></p>
-      </div>
+<div class="cmp cmp-header-text">
+  <div class="grid-container">
+    <div class="cell text-header">
+      <h1>Preise</h1>
     </div>
   </div>
 </div>
-
-<div class="cmp cmp-home-about">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <div class="cell medium-7 large-6 text-padding-right align-self-middle">
-        <h2>Wir stellen uns vor</h2>
-        <p class="font-20">Unser Team besteht aus</p>
-        <ul>
-          <li>Einer Podologin</li>
-          <li>Einer Fachfußpflegerin</li>
-        </ul>
-        <p class="font-20">
-          Wir sind alle darauf bedacht uns regelmäßig weiterzubilden und die Technik immer auf den neuesten Stand zu bringen.
-          Zudem wird die Hygiene auf höchsten Anforderungen eingehalten.
+<div class="cmp cmp-price-list">
+  <div class="margin-b-2 callout">
+    <div class="grid-container">
+      <div class="grid-x">
+        <p class="cell">
+          <strong>Liebe Patientinnen / Patienten,</strong> <br>
+          Therapie ist nicht gleich Therapie, klären Sie erst, welche Leistungen Sie persönlich
+          benötigen. Erst nach der Befunderhebung durch die Therapiepraxis wird festgelegt,
+          welche Qualifikation der Therapeut benötigt, welche Methode, wie intensiv, in
+          welcher Häufigkeit etc. die Behandlung durchgeführt werden muss.
+          Dies ist dann entscheidend für die Berechnung der Behandlungskosten.
+          <br>
+          <br>
+          Unsere Preisvereinbarungen richten sich nach der Berechnung der gesetzlichen
+          Krankenkasse und der Gebührenordnung für Therapeuten (Privatpatienten,
+          Privatzahler).
         </p>
       </div>
-      <div class="cell medium-4 large-6">
-        <div class="grid-x grid-margin-x grid-margin-y medium-up-1 large-up-2">
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/nicole.png" alt="Foto von Nicole Mordiconi">
-            <h4>Nicole Mordiconi</h4>
-            <span>Podologin, Inhaberin</span>
-          </div>
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/fina.png" alt="Foto von ">
-            <h4>Fina Krausche</h4>
-            <span>Fachfußpflegerin</span>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
-</div>
-<div class="cmp cmp-home-introduction">
+  <br>
   <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <h2 class="cell small-12">Bei uns sind Ihre Füße in guten Händen!</h2>
+    <div class="grid-x">
       <div class="cell">
-        <ul class="grid-x grid-margin-x medium-up-2">
-          <li class="cell">Wie sehen meine Füße aus?</li>
-          <li class="cell">Was machen meine Füße für mich?</li>
-          <li class="cell">Wie fühlen sich meine Füße an?</li>
-          <li class="cell">Was mache ich für meine Füße?</li>
+        <h4>
+          Neue Preise für die Podologie
+        </h4>
+        <p>Für Behandlungen, die ab dem 1. Juli 2022 stattfinden, sind pro Behandlung folgende Preise abzurechnen:</p>
+        <ul class="main-pricelist">
+          <li class="list-element">
+            <span>
+              <small>HPNR: 78010</small><br>
+              <strong>Podologische Behandlung (klein)</strong>
+            </span>
+            <span>
+              <small>Vergütung</small><br>
+              <strong>30,70€</strong>
+            </span>
+            <span>
+              <small>davon Zuzahlung (nachrichtlich)</small><br>
+              <strong>3,07€</strong>
+            </span>
+          </li>
+          <li class="list-element">
+            <span>
+              <small>HPNR: 78020</small><br>
+              <strong>Podologische Behandlung (groß)</strong>
+            </span>
+            <span>
+              <small>Vergütung</small><br>
+              <strong>44,00€</strong>
+            </span>
+            <span>
+              <small>davon Zuzahlung (nachrichtlich)</small><br>
+              <strong>4,40€</strong>
+            </span>
+          </li>
+          <li class="list-element">
+            <span>
+              <small>HPNR: 78030</small><br>
+              <strong>Podologische Befundung</strong>
+            </span>
+            <span>
+              <small>Vergütung</small><br>
+              <strong>3,00€</strong>
+            </span>
+            <span>
+              <small>davon Zuzahlung (nachrichtlich)</small><br>
+              <strong>0,30€</strong>
+            </span>
+          </li>
+          <li class="list-element">
+            <span>
+              <small>HPNR: 79933</small><br>
+              <strong>Hausbesuch, ärztlich verordnet, inkl. Wegegeld</strong>
+            </span>
+            <span>
+              <small>Vergütung</small><br>
+              <strong>17,50€</strong>
+            </span>
+            <span>
+              <small>davon Zuzahlung (nachrichtlich)</small><br>
+              <strong>1,75€</strong>
+            </span>
+          </li>
+          <li class="list-element">
+            <span>
+              <small>HPNR: 79934</small><br>
+              <strong>Hausbesuch in soz. Einrichtungen inkl. Wegegeld</strong>
+            </span>
+            <span>
+              <small>Vergütung</small><br>
+              <strong>10,00€</strong>
+            </span>
+            <span>
+              <small>davon Zuzahlung (nachrichtlich)</small><br>
+              <strong>1,00€</strong>
+            </span>
+          </li>
         </ul>
+        <p>
+          Seit dem 1. Juli 2019 gibt es bundesweit einheitliche Preise für alle Heilmittelerbringer — der Grund ist das Terminservice-
+          und Versorgungsgesetz. Vorher galten in jedem Bundesland und für jede Kassenart unterschiedliche Preise für Physiotherapie
+          Ergotherapie oder Podologie.
+        </p>
       </div>
-      <p class="cell">
-        So lautes das Leitbild unserer Praxis. Und aus diesem Grund kümmern wir uns nun schon seit <strong>1993</strong> um Ihre Füße und alles was damit zusammenhängt.
-        Wir bieten Ihnen vielfältige Behandlungen für Ihre Füße und beraten Sie ausführlich zu allen Fragen und Problemen rund um Füße, Schuhe und Strümpfe.
-        Damit Ihre Füße Sie auch morgen noch dorthin tragen wo Sie hin möchten.
-      </p>
     </div>
   </div>
 </div>
-<div class="cmp cmp-image-gallery">
+<div class="cmp cmp-cta">
   <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y medium-up-2 large-up-4">
-      <div class="cell image-box">
-        <a href="assets/img/praxis/empfang.jpg" data-lightbox="gallery">
-          <img src="assets/img/praxis/empfang.jpg" alt="Empfangsbereich der Praxis">
-        </a>
+    <div class="grid-x">
+      <h2 class="cell">
+        Wir beraten Sie gerne und helfen Ihnen weiter.
+      </h2>
+      <div class="cell">
+        <span>Telefon: <a href="tel:+496819256716">+49 681 / 9256716</a></span>
+        <span class="spacer show-for-medium">|</span>
+        <br class="hide-for-medium">
+        <span>E-Mail: <a href="mailto:podobellevue@arcor.de">podobellevue@arcor.de</a></span>
       </div>
-        <div class="cell image-box">
-          <a href="assets/img/praxis/wartebereich.jpg" data-lightbox="gallery">
-            <img src="assets/img/praxis/wartebereich.jpg" alt="Wartebereich der Praxis">
-          </a>
-        </div>
-          <div class="cell image-box">
-            <a href="assets/img/praxis/behandlung_1.jpg" data-lightbox="gallery">
-              <img src="assets/img/praxis/behandlung_1.jpg" alt="Erster Behandlungsraum der Praxis">
-            </a>
-          </div>
-            <div class="cell image-box">
-              <a href="assets/img/praxis/behandlung_2.jpg" data-lightbox="gallery">
-                <img src="assets/img/praxis/behandlung_2.jpg" alt="Zweiter Behandlungsraum der Praxis">
-              </a>
-            </div>
     </div>
   </div>
 </div>
