--- a/impressum.html
+++ b/impressum.html
@@ -70,98 +70,77 @@
   </div>
 </div>
 
-<div class="cmp cmp-header-img">
-  <div class="grid-container page-title">
-    <div class="grid-x">
-      <div class="cell">
-        <h3 class="light">Herzlich willkommen im medizinischen</h3>
-        <h1>
-          Gesundheitszentrum Bellevue
-        </h1>
-        <br>
-        <hr>
-        <p class="light">Inhaber - <b>Patrick Mordiconi</b></p>
-      </div>
+<div class="cmp cmp-header-text">
+  <div class="grid-container">
+    <div class="cell text-header">
+      <h1>Impressum</h1>
     </div>
   </div>
 </div>
+<div class="cmp cmp-impressum-textblock">
+  <div class="grid-container">
+    <h4>Angaben gemäß § 5 TMG:</h4>
+    <address>
+      Nicole Mordiconi<br>
+      Podologiepraxis<br>
+      Lerchesflurweg 9<br>
+      66119 Saarbrücken<br>
+      <br>
+      E-Mail: <a href="mailto:podobellevue@arcor.de">podobellevue@arcor.de</a><br>
+      Telefon: <a href="tel:+496819256716">+49 681 / 9256716</a><br>
+      Telefax: +49 681 / 9256716
+    </address>
 
-<div class="cmp cmp-home-about">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <div class="cell medium-7 large-6 text-padding-right align-self-middle">
-        <h2>Wir stellen uns vor</h2>
-        <p class="font-20">Unser Team besteht aus</p>
-        <ul>
-          <li>Einer Podologin</li>
-          <li>Einer Fachfußpflegerin</li>
-        </ul>
-        <p class="font-20">
-          Wir sind alle darauf bedacht uns regelmäßig weiterzubilden und die Technik immer auf den neuesten Stand zu bringen.
-          Zudem wird die Hygiene auf höchsten Anforderungen eingehalten.
-        </p>
-      </div>
-      <div class="cell medium-4 large-6">
-        <div class="grid-x grid-margin-x grid-margin-y medium-up-1 large-up-2">
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/nicole.png" alt="Foto von Nicole Mordiconi">
-            <h4>Nicole Mordiconi</h4>
-            <span>Podologin, Inhaberin</span>
-          </div>
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/fina.png" alt="Foto von ">
-            <h4>Fina Krausche</h4>
-            <span>Fachfußpflegerin</span>
-          </div>
-        </div>
-      </div>
+    <br>
+
+    <h4>Aufsichtsbehörde:</h4>
+    <p>Gesundheitsamt Saarbrücken</p>
+
+    <br>
+
+    <h4>Angaben zur Berufshaftpflichtversicherung:</h4>
+    <p><b>Name und Sitz der Gesellschaft:</b></p>
+    <address>
+      Axa Versicherungs AG<br>
+      Postfach 94 02 21<br>
+      51090 Köln
+    </address>
+    <p><b>Geltungsraum der Versicherung:</b> Deutschland</p>
+
+    <br>
+
+    <h4>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h4>
+    <address>
+      Nicole Mordiconi<br>
+      Lerchesflurweg 9<br>
+      66119 Saarbrücken
+    </address>
+
+    <br>
+
+    <h4>Design, Konzeption & Umsetzung</h4>
+    <address>
+      Benjamin Mordiconi<br>
+      Telefon: <a href="tel:+4917632471512">+49 176 / 32471512</a>
+      <br>
+      <br>
+      <a class="ig-link" href="https://www.instagram.com/beclamo/" target="_blank">
+        <img src="../../assets/img/ig-logo.png" alt="Instagram Icon">
+        <span>@beclamo</span>
+      </a>
+    </address>
+
+    <br>
+
+    <div>
+      <h4>Quellenangaben für die verwendeten Bilder und Grafiken:</h4>
+      Titelbild (Startseite): <a href="https://unsplash.com/photos/5pi6fCg_dwo" target="_blank">www.unsplash.com/@piecdesmit</a><br>
+      <!--a href="https://unsplash.com/photos/RbrsejLGVZ8" target="_blank">www.unsplash.com/@benhartley</a><br-->
+      <!-- Osterbanner (Startseite): <a href="https://unsplash.com/photos/FjojfUNJHGU" target="_blank">www.unsplash.com/@frostroomhead</a><br> -->
+      Arm (Medihandcare): <a href="https://unsplash.com/photos/T0xPy9PDyf4" target="_blank">www.unsplash.com/@adriensking</a><br>
+      Covid-Icon (Startseite): <a href="https://www.freepik.com/vectors/sign-board" target="_blank">www.freepik.com</a>
     </div>
-  </div>
-</div>
-<div class="cmp cmp-home-introduction">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <h2 class="cell small-12">Bei uns sind Ihre Füße in guten Händen!</h2>
-      <div class="cell">
-        <ul class="grid-x grid-margin-x medium-up-2">
-          <li class="cell">Wie sehen meine Füße aus?</li>
-          <li class="cell">Was machen meine Füße für mich?</li>
-          <li class="cell">Wie fühlen sich meine Füße an?</li>
-          <li class="cell">Was mache ich für meine Füße?</li>
-        </ul>
-      </div>
-      <p class="cell">
-        So lautes das Leitbild unserer Praxis. Und aus diesem Grund kümmern wir uns nun schon seit <strong>1993</strong> um Ihre Füße und alles was damit zusammenhängt.
-        Wir bieten Ihnen vielfältige Behandlungen für Ihre Füße und beraten Sie ausführlich zu allen Fragen und Problemen rund um Füße, Schuhe und Strümpfe.
-        Damit Ihre Füße Sie auch morgen noch dorthin tragen wo Sie hin möchten.
-      </p>
-    </div>
-  </div>
-</div>
-<div class="cmp cmp-image-gallery">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y medium-up-2 large-up-4">
-      <div class="cell image-box">
-        <a href="assets/img/praxis/empfang.jpg" data-lightbox="gallery">
-          <img src="assets/img/praxis/empfang.jpg" alt="Empfangsbereich der Praxis">
-        </a>
-      </div>
-        <div class="cell image-box">
-          <a href="assets/img/praxis/wartebereich.jpg" data-lightbox="gallery">
-            <img src="assets/img/praxis/wartebereich.jpg" alt="Wartebereich der Praxis">
-          </a>
-        </div>
-          <div class="cell image-box">
-            <a href="assets/img/praxis/behandlung_1.jpg" data-lightbox="gallery">
-              <img src="assets/img/praxis/behandlung_1.jpg" alt="Erster Behandlungsraum der Praxis">
-            </a>
-          </div>
-            <div class="cell image-box">
-              <a href="assets/img/praxis/behandlung_2.jpg" data-lightbox="gallery">
-                <img src="assets/img/praxis/behandlung_2.jpg" alt="Zweiter Behandlungsraum der Praxis">
-              </a>
-            </div>
-    </div>
+
   </div>
 </div>
 
