--- a/leistungen.html
+++ b/leistungen.html
@@ -48,7 +48,7 @@
       </a>
       <ul class="cell large-auto main-nav">
         <li><a class="" href="preise.html">Preise</a></li>
-        <li><a class="" href="leistungen.html">Leistungen</a></li>
+        <li><a class="active" href="leistungen.html">Leistungen</a></li>
       </ul>
     </div>
   </div>
@@ -70,98 +70,102 @@
   </div>
 </div>
 
-<div class="cmp cmp-header-img">
-  <div class="grid-container page-title">
+<div class="cmp cmp-header-text">
+  <div class="grid-container">
+    <div class="cell text-header">
+      <h1>Leistungen</h1>
+    </div>
+  </div>
+</div>
+<div class="cmp-service-textblock">
+  <div class="grid-container">
+    <h2>
+      Unsere Leistungen für Ihre Füße
+    </h2>
     <div class="grid-x">
       <div class="cell">
-        <h3 class="light">Herzlich willkommen im medizinischen</h3>
-        <h1>
-          Gesundheitszentrum Bellevue
-        </h1>
-        <br>
-        <hr>
-        <p class="light">Inhaber - <b>Patrick Mordiconi</b></p>
+        <p>
+          Damit Ihre Füße Sie auch morgen noch dorthin tragen wo Sie hin möchten, bieten wir Ihnen eine große Palette von individuellen Leistungen für Ihre Füße.
+        </p>
       </div>
     </div>
+  </div>
+</div>
+<div class="cmp bottom-space">
+  <div class="grid-container">
+    <ul class="grid-x grid-margin-x grid-marign-y medium-up-2">
+      <li class="cell">
+        Medizinische Fußpflege
+      </li>
+      <li class="cell">
+        Hornhautbehandlung
+      </li>
+      <li class="cell">
+        Diabetikerbehandlung <br>(Kassenförderung möglich)
+      </li>
+      <li class="cell">
+        Spangenbehandlung bei eingewachsenen Nägeln (Kassenförderung möglich)
+      </li>
+      <li class="cell">
+        Nagelbehandlung
+      </li>
+      <li class="cell">
+        Nagelprothesen
+      </li>
+      <li class="cell">
+        Druckentlastung
+      </li>
+      <li class="cell">
+        Reibungsschutz
+      </li>
+      <li class="cell">
+        Fußberatung
+      </li>
+      <li class="cell">
+        Schuhberatung
+      </li>
+      <li class="cell">
+        Einlagenberatung
+      </li>
+      <li class="cell">
+        Nagelpilzberatung und -behandlung
+      </li>
+    </ul>
   </div>
 </div>
 
-<div class="cmp cmp-home-about">
+<div class="cmp-service-textblock">
   <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <div class="cell medium-7 large-6 text-padding-right align-self-middle">
-        <h2>Wir stellen uns vor</h2>
-        <p class="font-20">Unser Team besteht aus</p>
-        <ul>
-          <li>Einer Podologin</li>
-          <li>Einer Fachfußpflegerin</li>
-        </ul>
-        <p class="font-20">
-          Wir sind alle darauf bedacht uns regelmäßig weiterzubilden und die Technik immer auf den neuesten Stand zu bringen.
-          Zudem wird die Hygiene auf höchsten Anforderungen eingehalten.
-        </p>
-      </div>
-      <div class="cell medium-4 large-6">
-        <div class="grid-x grid-margin-x grid-margin-y medium-up-1 large-up-2">
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/nicole.png" alt="Foto von Nicole Mordiconi">
-            <h4>Nicole Mordiconi</h4>
-            <span>Podologin, Inhaberin</span>
-          </div>
-          <div class="cell image-text-box">
-            <img src="assets/img/portraits/fina.png" alt="Foto von ">
-            <h4>Fina Krausche</h4>
-            <span>Fachfußpflegerin</span>
-          </div>
-        </div>
-      </div>
-    </div>
+    <h2>
+      Tipps für Diabetiker:
+    </h2>
   </div>
 </div>
-<div class="cmp cmp-home-introduction">
+<div class="cmp bottom-space">
   <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y">
-      <h2 class="cell small-12">Bei uns sind Ihre Füße in guten Händen!</h2>
-      <div class="cell">
-        <ul class="grid-x grid-margin-x medium-up-2">
-          <li class="cell">Wie sehen meine Füße aus?</li>
-          <li class="cell">Was machen meine Füße für mich?</li>
-          <li class="cell">Wie fühlen sich meine Füße an?</li>
-          <li class="cell">Was mache ich für meine Füße?</li>
-        </ul>
-      </div>
-      <p class="cell">
-        So lautes das Leitbild unserer Praxis. Und aus diesem Grund kümmern wir uns nun schon seit <strong>1993</strong> um Ihre Füße und alles was damit zusammenhängt.
-        Wir bieten Ihnen vielfältige Behandlungen für Ihre Füße und beraten Sie ausführlich zu allen Fragen und Problemen rund um Füße, Schuhe und Strümpfe.
-        Damit Ihre Füße Sie auch morgen noch dorthin tragen wo Sie hin möchten.
-      </p>
-    </div>
-  </div>
-</div>
-<div class="cmp cmp-image-gallery">
-  <div class="grid-container">
-    <div class="grid-x grid-margin-x grid-margin-y medium-up-2 large-up-4">
-      <div class="cell image-box">
-        <a href="assets/img/praxis/empfang.jpg" data-lightbox="gallery">
-          <img src="assets/img/praxis/empfang.jpg" alt="Empfangsbereich der Praxis">
-        </a>
-      </div>
-        <div class="cell image-box">
-          <a href="assets/img/praxis/wartebereich.jpg" data-lightbox="gallery">
-            <img src="assets/img/praxis/wartebereich.jpg" alt="Wartebereich der Praxis">
-          </a>
-        </div>
-          <div class="cell image-box">
-            <a href="assets/img/praxis/behandlung_1.jpg" data-lightbox="gallery">
-              <img src="assets/img/praxis/behandlung_1.jpg" alt="Erster Behandlungsraum der Praxis">
-            </a>
-          </div>
-            <div class="cell image-box">
-              <a href="assets/img/praxis/behandlung_2.jpg" data-lightbox="gallery">
-                <img src="assets/img/praxis/behandlung_2.jpg" alt="Zweiter Behandlungsraum der Praxis">
-              </a>
-            </div>
-    </div>
+    <ul class="grid-x grid-margin-x grid-marign-y medium-up-2">
+      <li class="cell">
+        Nicht barfuß gehen
+      </li>
+      <li class="cell">
+        Gute, geräumige Schuhe ohne Druckprobleme
+      </li>
+      <li class="cell">
+        Schuhe täglich auf Gegenstände kontrollieren (Spiegelkontrolle)
+      </li>
+      <li class="cell">
+        Keine Heizkissen! Fußbad nur körperwarm (Thermometer!) max. 3-5 Minuten. Nie „trockenfönen“.
+      </li>
+      <li class="cell">
+        Tägliches Einfetten der Füße mit rückfettenden Cremes
+      </li>
+      <li class="cell">
+        Nicht zwischen den Zehen fetten - Fußpilzgefahr
+      </li>
+      <li class="cell">
+        Selbstbehandlung nur mit Feile (gerundet) und Bimsstein
+      </li>
+    </ul>
   </div>
 </div>
 
