--- a/datenschutz.html
+++ b/datenschutz.html
@@ -155,8 +155,8 @@
     </div>
     <hr class="hide-for-large">
     <div class="cell large-3 relative">
-      <a class="cell large-shrink logo-wrap" href="index.html">
-        <img src="assets/img/logo.svg" alt="Podologie-Praxis Bellevue Logo">
+      <a class="cell large-shrink logo-wrap" href="https://www.myairbag24.de" target="_blank">
+        <img src="assets/img/ott-logo.png" alt="Logo Onkologische Trainings- und Bewegungstherapie">
       </a>
     </div>
     <div class="cell bottom-info">
