--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
             <h4>Fina Krausche</h4>
             <span>Fachfußpflegerin</span>
           </div>
+          <div class="cell image-text-box">
+            <img src="assets/img/portraits/fina.png" alt="Foto von ">
+            <h4>Fina Krausche</h4>
+            <span>Fachfußpflegerin</span>
+          </div>
+          <div class="cell image-text-box">
+            <img src="assets/img/portraits/fina.png" alt="Foto von ">
+            <h4>Fina Krausche</h4>
+            <span>Fachfußpflegerin</span>
+          </div>
         </div>
       </div>
     </div>
@@ -142,23 +152,23 @@
   <div class="grid-container">
     <div class="grid-x grid-margin-x grid-margin-y medium-up-2 large-up-4">
       <div class="cell image-box">
-        <a href="assets/img/praxis/empfang.jpg" data-lightbox="gallery">
-          <img src="assets/img/praxis/empfang.jpg" alt="Empfangsbereich der Praxis">
+        <a href="assets/img/praxis/pm_praxis_1.jpg" data-lightbox="gallery">
+          <img src="assets/img/praxis/pm_praxis_1.jpg" alt="Empfangsbereich der Praxis">
         </a>
       </div>
         <div class="cell image-box">
-          <a href="assets/img/praxis/wartebereich.jpg" data-lightbox="gallery">
-            <img src="assets/img/praxis/wartebereich.jpg" alt="Wartebereich der Praxis">
+          <a href="assets/img/praxis/pm_praxis_2.jpg" data-lightbox="gallery">
+            <img src="assets/img/praxis/pm_praxis_2.jpg" alt="Wartebereich der Praxis">
           </a>
         </div>
           <div class="cell image-box">
-            <a href="assets/img/praxis/behandlung_1.jpg" data-lightbox="gallery">
-              <img src="assets/img/praxis/behandlung_1.jpg" alt="Erster Behandlungsraum der Praxis">
+            <a href="assets/img/praxis/pm_praxis_3.jpg" data-lightbox="gallery">
+              <img src="assets/img/praxis/pm_praxis_3.jpg" alt="Erster Behandlungsraum der Praxis">
             </a>
           </div>
             <div class="cell image-box">
-              <a href="assets/img/praxis/behandlung_2.jpg" data-lightbox="gallery">
-                <img src="assets/img/praxis/behandlung_2.jpg" alt="Zweiter Behandlungsraum der Praxis">
+              <a href="assets/img/praxis/pm_praxis_4.jpg" data-lightbox="gallery">
+                <img src="assets/img/praxis/pm_praxis_4.jpg" alt="Zweiter Behandlungsraum der Praxis">
               </a>
             </div>
     </div>
@@ -200,8 +210,8 @@
     </div>
     <hr class="hide-for-large">
     <div class="cell large-3 relative">
-      <a class="cell large-shrink logo-wrap" href="index.html">
-        <img src="assets/img/logo.svg" alt="Podologie-Praxis Bellevue Logo">
+      <a class="cell large-shrink logo-wrap" href="https://www.myairbag24.de" target="_blank">
+        <img src="assets/img/ott-logo.png" alt="Logo Onkologische Trainings- und Bewegungstherapie">
       </a>
     </div>
     <div class="cell bottom-info">
